<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp">

    <RelativeLayout
    android:id="@+id/buttonContainer"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    >

    <Button
        android:id="@+id/buttonListen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:onClick="buttonListenOnClick"
        android:text="@string/listenBtn" />

    </RelativeLayout>

    <TextView
        android:id="@+id/tv_rel_altitude"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/buttonContainer" />

    <TextView
        android:id="@+id/resultTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_below="@+id/tv_rel_altitude" />

    <TableLayout
        android:id="@+id/workoutTableView"
        android:layout_width="fill_parent"
        android:layout_height="150dp"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/resultTextView"
        android:layout_alignParentStart="true"
        android:stretchColumns="1">

        <TableRow
            android:layout_width="fill_parent">

            <TextView
                android:layout_column="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/exercise"
                android:padding="3dip" />

            <TextView
                android:layout_width="200dip"
                android:layout_span="2"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:padding="3dip"
                android:text="@string/exercise_name" />

        </TableRow>
        <View
            android:layout_height="3dip"
            android:background="#FF909090"
            android:layout_width="fill_parent"/>

        <TableRow>
            <TextView
                android:layout_column="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sets"
                android:padding="3dip" />

            <TextView
                android:gravity="left"
                android:padding="3dip"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/perf_set" />

            <TextView
                android:gravity="right"
                android:padding="3dip"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="@string/sets_number" />

        </TableRow>
        <View
            android:layout_height="3dip"
            android:background="#FF909090"
            android:layout_width="fill_parent"/>

        <TableRow
            android:layout_width="fill_parent"
            android:gravity="center">
            <TextView
                android:layout_column="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reps"
                android:padding="3dip" />

            <TextView
                android:gravity="left"
                android:padding="3dip"
                android:layout_width="100dip"
                android:layout_height="wrap_content"
                android:text="@string/perf_reps" />

            <TextView
                android:gravity="right"
                android:padding="3dip"
                android:layout_width="50dip"
                android:layout_height="wrap_content"
                android:text="@string/reps_number" />

        </TableRow>
        <View
            android:layout_height="3dip"
            android:background="#FF909090"
            android:layout_width="fill_parent"/>

        <TableRow>
            <TextView
                android:layout_column="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weight"
                android:padding="3dip" />

            <TextView
                android:gravity="right"
                android:padding="3dip"
                android:layout_span="2"
                android:layout_width="200dip"
                android:layout_height="wrap_content"
                android:text="@string/weight2lift" />

        </TableRow>
        <View
            android:layout_height="3dip"
            android:background="#FF909090"
            android:layout_width="fill_parent"/>
    </TableLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="120px"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text=""
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/workoutTableView"
        android:id="@+id/countdownTimer"
        android:layout_marginLeft="8dp" />

</RelativeLayout>